[tool.poetry]
name = "python-web-hw11"
version = "0.1.0"
description = ""
authors = ["Val <yermakvaleriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
fastapi = "^0.110.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
